new badges, fixed config, gen badges via merit api

--- a/src/backend/config.json
+++ b/src/backend/config.json
@@ -1,1 +1,1 @@
-{"Authorization":"wookoouk@gmail.com","BaseUrl":"http://merit.tsl.ac.uk"}
+{"Authorization":"Basic bWFydGluLnBhZ2VAdHNsLmFjLnVrOkIwbkYxckU=","BaseUrl":"http://127.0.0.1:9000"}
